# app/app/api/app_http.pb.go
@@ -29,6 +29,7 @@ const OperationAppRecommendList = "/api.App/RecommendList"
 const OperationAppRecommendRewardList = "/api.App/RecommendRewardList"
 const OperationAppRecommendUpdate = "/api.App/RecommendUpdate"
 const OperationAppRewardList = "/api.App/RewardList"
+const OperationAppSetAllUserBnbBalance = "/api.App/SetAllUserBnbBalance"
 const OperationAppUpdateUserBnbBalance = "/api.App/UpdateUserBnbBalance"
 const OperationAppUploadRecommendUser = "/api.App/UploadRecommendUser"
 const OperationAppUserInfo = "/api.App/UserInfo"
@@ -46,6 +47,7 @@ type AppHTTPServer interface {
 	RecommendRewardList(context.Context, *RecommendRewardListRequest) (*RecommendRewardListReply, error)
 	RecommendUpdate(context.Context, *RecommendUpdateRequest) (*RecommendUpdateReply, error)
 	RewardList(context.Context, *RewardListRequest) (*RewardListReply, error)
+	SetAllUserBnbBalance(context.Context, *SetAllUserBnbBalanceRequest) (*SetAllUserBnbBalanceReply, error)
 	UpdateUserBnbBalance(context.Context, *UpdateUserBnbBalanceRequest) (*UpdateUserBnbBalanceReply, error)
 	UploadRecommendUser(context.Context, *UploadRecommendUserRequest) (*UploadRecommendUserReply, error)
 	UserInfo(context.Context, *UserInfoRequest) (*UserInfoReply, error)
@@ -70,6 +72,7 @@ func RegisterAppHTTPServer(s *http.Server, srv AppHTTPServer) {
 	r.GET("/api/admin_dhb/fee", _App_AdminFee0_HTTP_Handler(srv))
 	r.GET("/api/admin_dhb/upload_recommend_user", _App_UploadRecommendUser0_HTTP_Handler(srv))
 	r.GET("/api/admin_dhb/update_user_bnb_balance", _App_UpdateUserBnbBalance0_HTTP_Handler(srv))
+	r.GET("/api/admin_dhb/set_all_user_bnb_balance", _App_SetAllUserBnbBalance0_HTTP_Handler(srv))
 }
 
 func _App_EthAuthorize0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Context) error {
@@ -366,6 +369,25 @@ func _App_UpdateUserBnbBalance0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Co
 	}
 }
 
+func _App_SetAllUserBnbBalance0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in SetAllUserBnbBalanceRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAppSetAllUserBnbBalance)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.SetAllUserBnbBalance(ctx, req.(*SetAllUserBnbBalanceRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*SetAllUserBnbBalanceReply)
+		return ctx.Result(200, reply)
+	}
+}
+
 type AppHTTPClient interface {
 	AdminFee(ctx context.Context, req *AdminFeeRequest, opts ...http.CallOption) (rsp *AdminFeeReply, err error)
 	AdminWithdraw(ctx context.Context, req *AdminWithdrawRequest, opts ...http.CallOption) (rsp *AdminWithdrawReply, err error)
@@ -377,6 +399,7 @@ type AppHTTPClient interface {
 	RecommendRewardList(ctx context.Context, req *RecommendRewardListRequest, opts ...http.CallOption) (rsp *RecommendRewardListReply, err error)
 	RecommendUpdate(ctx context.Context, req *RecommendUpdateRequest, opts ...http.CallOption) (rsp *RecommendUpdateReply, err error)
 	RewardList(ctx context.Context, req *RewardListRequest, opts ...http.CallOption) (rsp *RewardListReply, err error)
+	SetAllUserBnbBalance(ctx context.Context, req *SetAllUserBnbBalanceRequest, opts ...http.CallOption) (rsp *SetAllUserBnbBalanceReply, err error)
 	UpdateUserBnbBalance(ctx context.Context, req *UpdateUserBnbBalanceRequest, opts ...http.CallOption) (rsp *UpdateUserBnbBalanceReply, err error)
 	UploadRecommendUser(ctx context.Context, req *UploadRecommendUserRequest, opts ...http.CallOption) (rsp *UploadRecommendUserReply, err error)
 	UserInfo(ctx context.Context, req *UserInfoRequest, opts ...http.CallOption) (rsp *UserInfoReply, err error)
@@ -514,6 +537,19 @@ func (c *AppHTTPClientImpl) RewardList(ctx context.Context, in *RewardListReques
 	pattern := "/api/app_server/reward_list"
 	path := binding.EncodeURL(pattern, in, true)
 	opts = append(opts, http.Operation(OperationAppRewardList))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *AppHTTPClientImpl) SetAllUserBnbBalance(ctx context.Context, in *SetAllUserBnbBalanceRequest, opts ...http.CallOption) (*SetAllUserBnbBalanceReply, error) {
+	var out SetAllUserBnbBalanceReply
+	pattern := "/api/admin_dhb/set_all_user_bnb_balance"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationAppSetAllUserBnbBalance))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
 	if err != nil {
