# openapi.yaml
@@ -42,11 +42,35 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/admin_dhb/set_all_user_bnb_balance:
+        get:
+            tags:
+                - App
+            operationId: App_SetAllUserBnbBalance
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/SetAllUserBnbBalanceReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/admin_dhb/update_user_bnb_balance:
         get:
             tags:
                 - App
             operationId: App_UpdateUserBnbBalance
+            parameters:
+                - name: num
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
             responses:
                 "200":
                     description: OK
@@ -441,6 +465,9 @@ components:
                     type: string
                 type:
                     type: string
+        SetAllUserBnbBalanceReply:
+            type: object
+            properties: {}
         Status:
             type: object
             properties:
